--- a/src/Diamante/DeskBundle/Resources/views/Branch/view.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Branch/view.html.twig
@@ -17,7 +17,7 @@
     {% if resource_granted('EDIT', entity) %}
         {{ UI.button({
             'path': path('diamante_branch_update', {'id': entity.id}),
-            'iCss': 'icon-edit',
+            'iCss': 'fa-pencil-square-o',
             'title': 'diamante.desk.branch.actions.edit'|trans,
             'label': 'diamante.desk.ui.edit'|trans
         }) }}
@@ -28,7 +28,7 @@
         {{ UI.clientButton({
             'dataUrl': path('diamante_branch_view_delete_form', {id: entity.id}),
             'aCss': 'remove-brunch',
-            'iCss': 'icon-trash',
+            'iCss': 'fa-trash-o',
             'dataId': entity.id,
             'id': 'btn-delete-form',
             'label': 'diamante.desk.ui.delete'|trans,
