--- a/src/Diamante/DeskBundle/Resources/views/Ticket/attachment/list.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/attachment/list.html.twig
@@ -1,7 +1,7 @@
 {% import 'OroUIBundle::macros.html.twig' as ui %}
 
 <div class="widget-content">
-    <ul id="diam-attachments" class="diam-attachments unstyled clearfix">
+    <ul id="diam-attachments" class="diam-attachments list-unstyled clearfix">
     {% for key, attachment in attachments %}
         <li class="diam-attachment">
             <figure>
@@ -23,7 +23,7 @@
                 <figcaption>
                     <span class="pull-right">
                         <a class="no-hash" href="{{ path('diamante_ticket_attachment_download', {'ticketId': ticket.id, 'attachId': attachment.id}) }}"><i class="icon-download-alt hide-text" title="{{ 'diamante.desk.attachment.actions.download'|trans }}">{{ 'diamante.desk.attachment.actions.download'|trans }}</i></a>
-                        <a href="{{ path('diamante_ticket_attachment_remove', {'ticketId': ticket.id, 'attachId': attachment.id}) }}"><i class="icon-trash hide-text" title="{{ 'diamante.desk.attachment.actions.remove'|trans }}">{{ 'diamante.desk.attachment.actions.remove'|trans }}</i></a>
+                        <a href="{{ path('diamante_ticket_attachment_remove', {'ticketId': ticket.id, 'attachId': attachment.id}) }}"><i class="fa-trash-o hide-text" title="{{ 'diamante.desk.attachment.actions.remove'|trans }}">{{ 'diamante.desk.attachment.actions.remove'|trans }}</i></a>
                     </span>
                     <strong>{{ attachment.filename|escape }}</strong>
                 </figcaption>
@@ -72,7 +72,7 @@
             <figcaption>
                 <span class="pull-right">
                     <a class="no-hash" href="<%= attachment.url %>"><i class="icon-download-alt hide-text" title="{{ 'diamante.desk.attachment.actions.download'|trans }}">{{ 'diamante.desk.attachment.actions.download'|trans }}</i></a>
-                    <a href="<%= attachment.delete %>"><i class="icon-trash hide-text" title="{{ 'diamante.desk.attachment.actions.remove'|trans }}">{{ 'diamante.desk.attachment.actions.remove'|trans }}</i></a>
+                    <a href="<%= attachment.delete %>"><i class="fa-trash-o hide-text" title="{{ 'diamante.desk.attachment.actions.remove'|trans }}">{{ 'diamante.desk.attachment.actions.remove'|trans }}</i></a>
                 </span>
                 <strong><%= _.escape(attachment.filename) %></strong>
             </figcaption>
