--- a/src/Diamante/DeskBundle/Resources/views/Ticket/widget/watchers.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/widget/watchers.html.twig
@@ -1,13 +1,13 @@
 {% import 'OroUIBundle::macros.html.twig' as ui %}
 
 <div class="widget-content">
-    <ul class="unstyled clearfix">
+    <ul class="list-unstyled clearfix">
         {% for watcher in watchers %}
             <li class="diam-attachment">
                 <span class='{% if is_diamante_user_deleted(watcher) %}{{ "deleted-reporter" }}{% endif %}' >{{ render_user_name(watcher) }}</span>
                 <span class="pull-right">
                     <a href="{{ path('diamante_remove_watcher', { 'ticketId': ticket.id, 'user': watcher } ) }}">
-                        <i class="icon-remove hide-text" title="{{ 'diamante.desk.ui.delete'|trans }}">
+                        <i class="fa-times hide-text" title="{{ 'diamante.desk.ui.delete'|trans }}">
                             {{ 'diamante.desk.ui.delete'|trans }}
                         </i>
                     </a>
