[DIAN-1950] - remove task comments numbering

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -1,5 +1,6 @@
 .diam-attachments {
     position: relative;
+    list-style-type: none;
 }
 .diam-attachment {
     float: left;
@@ -69,6 +70,7 @@
 
 .diam-comments {
     margin: 0 0 1em;
+    list-style-type: none;
 }
 
 .diam-comment {
