[DIAN-1954,1948] - fix diam-user-type label

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -345,6 +345,11 @@ div[id^="grid-audit-grid"] td.number-cell {
     border-radius: .25em;
 }
 
+.select2-chosen .diam-user-type {
+    vertical-align: bottom;
+    display: inline-block;
+}
+
 .diam-user-type.oro {
     background-color: #3984B6;
 }
