--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -358,3 +358,10 @@ div[id^="grid-audit-grid"] td.number-cell {
     background-color: #1D2E81;
 }
 
+.desktop-version .side-menu-overlay .divider {
+    display: block;
+    height: 1px;
+    margin: 5px 0 5px 16px;
+    border: 1px solid #e3e3e4;
+    border-width: 1px 0 0;
+}
