--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -365,3 +365,7 @@ div[id^="grid-audit-grid"] td.number-cell {
     border: 1px solid #e3e3e4;
     border-width: 1px 0 0;
 }
+
+.desktop-version .main-menu-sided.minimized .dropdown-level-1.active .title {
+    color: #545456;
+}
