DIAM-1949: Errors with tickets' images interactions - Added new data_root dir to liip_imagine configuration - Changed upload path to var/attachments

--- a/src/Diamante/DeskBundle/Resources/views/Ticket/attachment/list.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/attachment/list.html.twig
@@ -7,7 +7,7 @@
             <figure>
                 <div class="diam-attachment-preview">
                 {% set attachmentExtension = attachment.file.extension %}
-                {% set attachmentPreviewSrc = attachment.file.pathname %}
+                {% set attachmentPreviewSrc = attachment.file.location %}
                 {% if attachmentExtension == '' %}
                     <img src="{{ asset('bundles/diamantedesk/img/logo_oro.png') | imagine_filter('attach_preview_default') }}" alt="{{ attachment.filename|escape }}"/>
                 {% elseif (attachmentExtension == 'jpg' or attachmentExtension == 'jpeg' or
