--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -383,3 +383,25 @@ div[id^="grid-audit-grid"] td.number-cell {
 .ui-dialog-content .form-horizontal .control-group>.control-label {
     width: auto !important;
 }
+
+.form-horizontal .control-group {
+    position: relative;
+    flex-wrap: wrap;
+    max-width: 100%;
+}
+
+.form-horizontal .control-group .control-label.wrap {
+    margin-right: 24px;
+    margin-top: 10px;
+}
+
+.form-horizontal .control-group .controls {
+    min-width: 0;
+    max-width: 100%;
+    margin-top: 10px;
+    margin-left: 0;
+}
+
+.form-horizontal .control-group .controls .selector {
+    max-width: 100%;
+}
