[DIAN-1994] - Position of pop-up window

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -405,3 +405,11 @@ div[id^="grid-audit-grid"] td.number-cell {
 .form-horizontal .control-group .controls .selector {
     max-width: 100%;
 }
+
+.oro-modal-normal.widget-setup .modal-dialog {
+    margin-top: 0;
+}
+.modal-dialog {
+    margin-top: 0;
+    margin-bottom: 0;
+}
