--- a/src/Diamante/DeskBundle/Resources/public/css/diam.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.css
@@ -399,6 +399,7 @@ ol.unstyled {
 ul, ol {
     padding: 0;
     margin: 0 0 10px 25px;
+}
 
 .ui-dialog-content .form-horizontal .control-group>.control-label {
     width: auto !important;
